--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="/#src/css/style.css"> -->
-    <link rel="stylesheet" href="/src/css/style.min.css">
-    <link rel="stylesheet" href="https://code.jquery.com/jquery-3.6.0.min.js">
+    <link rel="stylesheet" href="style.min.css">
+    /*<link rel="stylesheet" href="https://code.jquery.com/jquery-3.6.0.min.js">*/
     <title>Mixed messages</title>
 </head>
 
@@ -81,7 +80,7 @@
             </div>
         </footer>
     </div>
-    <script src="/src/js/script.min.js"></script>
+    <script src="script.min.js"></script>
 </body>
 
 </html>
