--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="/#src/css/style.css"> -->
     <link rel="stylesheet" href="/css/style.min.css">
-    <link rel="stylesheet" href="https://code.jquery.com/jquery-3.6.0.min.js">
+    <!-- <link rel="stylesheet" href="https://code.jquery.com/jquery-3.6.0.min.js"> -->
     <title>Mixed messages</title>
 </head>
 
