--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <p>The project was attended by:&nbsp;&nbsp;</p>
                     </div>
                     <div class="footer">
-                        <p><a href="https://github.com/Smbat1505/Mixed-message.github.io.git">Sem Antony</a><br>and<br><a
+                        <p><a href="https://github.com/Smbat1505/Mixed-message.github.io.git" rel="noopener noreferrer">Sem Antony</a><br>and<br><a
                                 href="">Unknown</a></p>
                     </div>
                 </div>
